--- a/package.json
+++ b/package.json
@@ -153,7 +153,9 @@
             "lodash@>=3.7.0 <4.17.19": ">=4.17.19",
             "lodash@<4.17.5": ">=4.17.5",
             "lodash@<4.17.12": ">=4.17.12",
-            "cross-spawn@>=7.0.0 <7.0.5": ">=7.0.5"
+            "cross-spawn@>=7.0.0 <7.0.5": ">=7.0.5",
+            "brace-expansion@>=1.0.0 <=1.1.11": ">=1.1.12",
+            "brace-expansion@>=2.0.0 <=2.0.1": ">=2.0.2"
         }
     }
 }
